# AutoPXLs

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App — копия.jsx  App.css  App.jsx  init.js  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/components/: Authentication.jsx  ChangePassword.jsx  Dashboard.jsx  DashboardCard.jsx  DashboardCardDisabled.jsx  Filling.jsx  GlobalAuthentication.jsx  MainAuthentication.jsx  MinerApp.jsx  Popup.jsx  PopupChildSettings.jsx  PopupChildSettingsRow.jsx  Profiles.jsx  ProfilesAuthentication.jsx  ProfilesForm.jsx  ProfilesFormItem.jsx  ProfilesMenu.jsx  RefreshButton.jsx  ResetPassword.jsx  index.jsx
src/store/: authorizedSlice.js  globalAuthorizedSlice.js  pageSlice.js  passwordSlice.js  profilesSlice.js  store.js
src/utils/: Constants.jsx  Functions.js  User-agents.js  abiPXLs.js  abiPXLsChest.js
src/utils/abi/: AbiJade.js  AbiPXLsChest.js
tauri-plugin-awesome/: Cargo.toml
tauri-plugin-awesome/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-awesome/webview-src/: index.ts
