[package]
name = "auto_pxls"
version = "1.0.0"
description = "AutoPXLs"
authors = ["Logos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
rand = "0.8.5"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
